--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Główna</title>
+  <meta charset="UTF-8">
+  <title>KotHub – Platforma e-learningowa</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 20px;
+      background-color: white;
+    }
+
+    h2 {
+      color: #2c3e50;
+    }
+
+    ul {
+      list-style-type: square;
+      margin-left: 20px;
+    }
+
+    img {
+      max-width: 100%;
+      border-radius: 6px;
+      margin: 10px 0;
+    }
+
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>TEST STRONY</h1>
-    
-</body>
-</html>
+
+  <header>
+    <h1>KotHub – Nowoczesna platforma e-learningowa</h1>
+    <p>dla uczniów kierunków informatycznych</p>
+  </header>
+
+  <div class="container">
+
+    <img src="https://tse3.mm.bing.net/th?id=OIP.ZVdjT86vcoz-86XUuSLpvAHaEK&pid=Api" alt="E-learning intro">
+
+    <h2>Co oferuje KotHub?</h2>
+    <p>KotHub to kompleksowa platforma edukacyjna, która umożliwia dostęp do szerokiego zakresu kursów i materiałów dydaktycznych z dziedziny informatyki.</p>
+
+    <ul>
+      <li>Informatyka</li>
+      <li>Pracownia Aplikacji Webowych</li>
+      <li>Systemy i Sieci Komputerowe</li>
+      <li>Projektowanie oprogramowania</li>
+      <li>Praktyki zawodowe</li>
+      <li>Egzaminy zawodowe INF.02, INF.03, INF.04</li>
+    </ul>
+
+    <h2>Dla kogo?</h2>
+    <p>Platforma została zaprojektowana z myślą o uczniach techników informatycznych, nauczycielach oraz osobach poszerzających swoją wiedzę z zakresu IT.</p>
+
+    <img src="https://tse3.mm.bing.net/th?id=OIP.41mlZjIPuVhIw2gWLIc9LQHaE8&pid=Api" alt="Nauka online">
+
+    <h2>Dlaczego warto?</h2>
+    <ul>
+      <li><strong>Dostępność:</strong> ucz się z dowolnego miejsca i o każdej porze</li>
+      <li><strong>Aktualność:</strong> materiały zgodne z wymaganiami egzaminacyjnymi</li>
+      <
