--- a/grid_porownanie.html
+++ b/grid_porownanie.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div id="pierwszy"><h1 style="text-align: center; margin-top: auto; margin-bottom: auto;">TO JEST FLOAT LEFT i CLEAR: BOTH</h1></div>
-    <div id="drugi"><input type="button" value="TEST" onclick="zmienTekst()"><p id="mojParagraf">Tu będzie tekst...</p>
+    <div id="drugi"><h2 style="padding: 20px;">Imie i nazwisko</h2><input type="button" value="TEST" onclick="zmienTekst()"><p id="mojParagraf">Tu będzie tekst...</p>
     </div>
-    <div id="trzeci"></div>
-    <div id="czwarty"></div>
+    <div id="trzeci"> <h2 style="padding: 20px;">Imie i nazwisko</h2><br> <img src="https://www.sheba.pl/sites/g/files/fnmzdf7906/files/2023-03/co-moze-jesc-kot_-produkty-ktore-smialo-mozesz-wcielic-do-jego-diety_optimized_1597650834564_0.jpeg"></div>
+    <div id="czwarty"><h2 style="padding: 20px; text-align: center;">Imie i nazwisko</h2></div>
     
     <script>
         function zmienTekst() {
